[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-url-clean"
version = "0.1.4"
description = "Remove tracking parameters from URLs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["url", "clean", "tracking", "utm", "privacy", "sanitize"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-url-clean#readme"
Repository = "https://github.com/philiprehberger/py-url-clean"
Issues = "https://github.com/philiprehberger/py-url-clean/issues"
Changelog = "https://github.com/philiprehberger/py-url-clean/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_url_clean"]
